# image-scoring-model

./: .gitignore  README.md  WORKLOG.md  pyproject.toml
docs/: API_CONTRACT.md  BACKEND_INTEGRATION.md  BIRD_DETECTION.md  PIPELINE.md  README.md  TRAINING.md
models/: README.md
src/eye_quality/: __init__.py  __main__.py  cli.py  pipeline.py  schemas.py
src/eye_quality/crop/: __init__.py  eye_crop.py
src/eye_quality/localization/: __init__.py  keypoint_schema.py  pose_model.py
src/eye_quality/scoring/: __init__.py  aggregate.py  heuristics.py
tests/: conftest.py  test_aggregate.py  test_convert_cub200.py  test_eye_crop.py  test_heuristics.py  test_pipeline.py  test_pose_inference_gpu.py  test_prepare_dataset.py  test_schemas.py
training/: __init__.py  convert_cub200.py  eval_localization.py  prepare_dataset.py  train_pose.py
training/configs/: wildlife_bird.yaml
