[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eye-quality"
version = "0.1.0"
description = "Wildlife eye localization and heuristic eye-focus scoring for Vexlum culling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vexlum" }]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "pydantic>=2.0",
    "ultralytics>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
eye-quality = "eye_quality.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
markers = [
    "gpu: tests that require GPU and YOLO weights",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
